--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <style>body { font-size: 1.3em; }</style>
     <title>Name Calculator</title>
   </head>
-  <body ng-app="NameCalculator">
-    <h1>Name Calculator</h1>
-    <div ng-controller="NameCalculatorController">
+  <body ng-app="LunchCheck">
+    <h1>Assignment1</h1>
+    <div ng-controller="LunchCheckController">
       <div>
-        Your name:
+        Enter the list:
         <input type="text"
-          ng-model="name"
-          ng-keyup="displayNumeric();">
+          ng-model="list">
+        <div>{{message}}</div>
+        <br/>
+        <button ng-click="displayMessage()">Check If Too Much</button>
       </div>
-      <div>Total Numeric value of person's name is: {{totalValue}}</div>
     </div>
   </body>
 </html>
