Assignment 1 - add color fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Enter a comma separated list (empty word (",,") are ignored:
         <input type="text"
           ng-model="list">
-        <div ><font color={{textColor}}>{{message}}</font></div>
+        <div ><font color="{{textColor}}">{{message}}</font></div>
         <br/>
         <button ng-click="displayMessage()">Check If Too Much</button>
       </div>
