Assignment 1 - add text input border

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Assignment1</h1>
     <div ng-controller="LunchCheckController">
       <div>
-        Enter a comma separated list (empty word (",,") are ignored:
+        Enter a comma separated list (empty word ",," are ignored):
         <input type="text" style="border-color:{{textColor}}"
           ng-model="list">
         <div style ="color:{{textColor}}">{{message}}</div>
