--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='ShoppingListCheckOff'>
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app.js"></script>
-    <style>body { font-size: 1.3em; }</style>
-    <title>Lunch Check</title>
+    <title>Shopping List</title>
   </head>
-  <body ng-app="LunchCheck">
-    <h1>Assignment1</h1>
-    <div ng-controller="LunchCheckController">
-      <div>
-        Enter a comma separated list (empty word ",," are ignored):
-        <input type="text" style="border-color:{{textColor}}"
-          ng-model="list">
-        <div style ="color:{{textColor}}">{{message}}</div>
-        <br/>
-        <button ng-click="displayMessage()">Check If Too Much</button>
-      </div>
+  <body>
+    <h1>Shopping List</h1>
+
+    <div ng-controller='ShoppingListController1 as toBuyList'>
+      <h3>To Buy List</h3>
+      <div ng-if="toBuyList.items.length === 0">Everything is bought!</div>
+      <ol>
+        <li ng-repeat="item in toBuyList.items">
+          Buy {{ item.quantity }} {{ item.name }}
+          <button ng-click="toBuyList.markAsBought($index);">Bought</button>
+        </li>
+      </ol>
     </div>
+
+    <div ng-controller='ShoppingListController2 as boughtList'>
+      <h3>Already Bought List</h3>
+      <div ng-if="boughtList.items.length === 0">Nothing bought yet</div>
+      <ol>
+        <li ng-repeat="item in boughtList.items">
+          Bought {{ item.quantity }} {{ item.name }}
+        </li>
+      </ol>
+    </div>
+
   </body>
 </html>
