--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
     </div>
     
+    <ul>
+        <li ng-repeat="item in ctrl.foundItems">
+          {{ item.name }}
+        </li>
+      </ul>
+      
     <!-- found-items should be implemented as a component -->
     <found-items found-items="ctrl.foundItems" on-remove="ctrl.removeItem(itemIndex)"></found-items>
   </div>
