--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
     </div>
+    
+    <ol>
+    <li ng-repeat="item in list.items">
+      {{ item.name }}, {{ item.short_name }}, {{ item.description }}
+      <!--<button ng-click="list.onRemove({index: $index});">Don't want this one!</button> -->
+    </li>
+    </ol> 
       
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="ctrl.foundItems" on-remove="ctrl.removeItem(itemIndex)"></found-items>
+    <!-- found-items should be implemented as a component 
+    <found-items found-items="ctrl.foundItems" on-remove="ctrl.removeItem(itemIndex)"></found-items>-->
   </div>
 
 </body>
