--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="app.js"></script>
   </head>
 <body ng-app='NarrowItDownApp'>
-   <div class="container" ng-controller="NarrowItDownController as ctrl">
+   <div class="container" ng-controller='NarrowItDownController as ctrl'>
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
