--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <ol>
       <li ng-repeat="item in ctrl.foundItems">
-        {{ item.name }}, {{ item.short_name }}, {{ item.description }}
+        {{ item.name }}
         <!--<button ng-click="list.onRemove({index: $index});">Don't want this one!</button> -->
       </li>
     </ol> 
