--- a/menuitems.html
+++ b/menuitems.html
@@ -1,6 +1,6 @@
 <div class="loader">
 
-<div class="warning">Nothing found!</div>
+<div class="warnings">Nothing found!</div>
     
 <ol>
   <li ng-repeat="item in list.items">
