--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app.js"></script>
   </head>
@@ -20,11 +20,6 @@
       <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
     </div>
 
-<ol>
-  <li ng-repeat="item in ctrl.foundItems">
-    {{ item.name }}, {{ item.short_name }}, {{ item.description }}
-  </li>
-</ol>    	
 	 
     <!-- found-items should be implemented as a component -->
     <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(itemIndex)"></found-items>
