--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
     </div>
 
+    <div class="warnings" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</span>
 	 
     <!-- found-items should be implemented as a component -->
-    <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(itemIndex)"></found-items>
+    <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(index)"></found-items>
   </div>
 
 </body>
