--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
     </div>
 
-    <div class="warnings" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</span>
+    <div class="warnings" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</div>
 	 
     <!-- found-items should be implemented as a component -->
     <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(index)"></found-items>
