--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="controller.js"></script>
+    <script src="directive.js"></script>
   </head>
 <body ng-app='NarrowItDownApp'>
    <div class="container" ng-controller='NarrowItDownController as ctrl'>
