--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="directive.js"></script>
   </head>
 <body ng-app='NarrowItDownApp'>
+  <h1>Narrow Down Your Chinese Menu Choice</h1>
   
   <ui-view></ui-view>
    
