--- a/main.template.html
+++ b/main.template.html
@@ -1,6 +1,7 @@
 <div class="container" ng-controller='NarrowItDownController as ctrl'>
     
-
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
+      
     <div class="form-group">
       <input type="text" placeholder="search term" class="form-control" ng-model="ctrl.searchTerm">
     </div>
