--- a/item-detail.template.html
+++ b/item-detail.template.html
@@ -1,5 +1,8 @@
 <a ui-sref="home">Back</a> &lt;
 
-<div>
-{{ itemDetail.name }}, {{ itemDetail.description }}
-</div>
+<div class="col-md-2">{{ itemDetail.name }}</div>
+<div class="col-md-2">{{ itemDetail.description }}</div>
+<div class="col-md-2">{{ itemDetail.price_small }}</div>
+<div class="col-md-2">{{ itemDetail.small_portion_name }}</div>
+<div class="col-md-2">{{ itemDetail.price_large }}</div>
+<div class="col-md-2">{{ itemDetail.large_portion_name }}</div>
