--- a/item-detail.template.html
+++ b/item-detail.template.html
@@ -1,8 +1,18 @@
 <a ui-sref="home">Back</a> &lt;
-
-<div class="col-md-2">{{ itemDetail.name }}</div>
-<div class="col-md-2">{{ itemDetail.description }}</div>
-<div class="col-md-2">{{ itemDetail.price_small }}</div>
-<div class="col-md-2">{{ itemDetail.small_portion_name }}</div>
-<div class="col-md-2">{{ itemDetail.price_large }}</div>
-<div class="col-md-2">{{ itemDetail.large_portion_name }}</div>
+<br/>
+<div class="row">
+    <div class="col-md-2">NAME</div>
+    <div class="col-md-2">DESCRIPTION</div>
+    <div class="col-md-2">PRICE SMALL</div>
+    <div class="col-md-2">SMALL PORTION UNIT</div>
+    <div class="col-md-2">PRICE LARGE</div>
+    <div class="col-md-2">LARGE PORTION UNIT</div>
+</div>
+<div class="row">
+    <div class="col-md-2">{{ itemDetail.name }}</div>
+    <div class="col-md-2">{{ itemDetail.description }}</div>
+    <div class="col-md-2">{{ itemDetail.price_small }}</div>
+    <div class="col-md-2">{{ itemDetail.small_portion_name }}</div>
+    <div class="col-md-2">{{ itemDetail.price_large }}</div>
+    <div class="col-md-2">{{ itemDetail.large_portion_name }}</div>
+</div>
