--- a/menuitems.html
+++ b/menuitems.html
@@ -1,9 +1,9 @@
 <div class="loader">
 
 <ol>
-  <li ng-repeat="item in list.items" >
+  <li ng-repeat="item in $ctrl.items" >
     <a ui-sref="itemDetail({itemId: $index})">{{ item.name }}</a>, {{ item.short_name }}, {{ item.description }}
-    <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+    <button ng-click="$ctrl.onRemove($index);">Don't want this one!</button>
   </li>
 </ol>    
     
