--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <script src="controller.js"></script>
   <script src="service.js"></script>
-  <script src="directive.js"></script>
+  <script src="component.js"></script>
 
 </body>
 </html>
