--- a/menuitems.html
+++ b/menuitems.html
@@ -3,7 +3,7 @@
 <ol>
   <li ng-repeat="item in $ctrl.items" >
     <a ui-sref="itemDetail({itemId: $index})">{{ item.name }}</a>, {{ item.short_name }}, {{ item.description }}
-    <button ng-click="$ctrl.onRemove($index);">Don't want this one!</button>
+    <button ng-click="$ctrl.remove($index);">Don't want this one!</button>
   </li>
 </ol>    
     
