--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 <body ng-app='NarrowItDownApp'>
 
+  <load-spinner></load-spinner>
+  
   <ui-view></ui-view>
   
 
@@ -16,8 +18,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
   
-  
+  <!-- Modules -->
   <script src="app.js"></script>
+  <script src="spinner/spinner.module.js"></script>
   
   <!-- Routes -->
   <script src="routes.js"></script>
@@ -25,6 +28,8 @@
   <script src="controller.js"></script>
   <script src="service.js"></script>
   <script src="component.js"></script>
+  
+  <script src="spinner/loadspinner.component.js"></script>
 
 </body>
 </html>
