--- a/spinner/loadspinner.template.html
+++ b/spinner/loadspinner.template.html
@@ -1,4 +1,4 @@
 <img ng-if="$ctrl.showSpinner"
      class="loading-icon"
-     src="spinner/flickr-loading.gif"
+     src="http://loading.io/assets/img/hourglass.svg"
      alt="loading">
