--- a/main.template.html
+++ b/main.template.html
@@ -10,7 +10,8 @@
     </div>
     <br/>
     <br/>
-    <div class="warnings" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</div>
+    <br/>
+    <div class="warning" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</div>
 	 
     <!-- found-items should be implemented as a component -->
     <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(index)"></found-items>
