--- a/menuitems.html
+++ b/menuitems.html
@@ -1,7 +1,7 @@
 <br/>
 <ol>
   <li ng-repeat="item in $ctrl.items" >
-    <a ui-sref="home.itemDetail({itemId: $index})">{{ item.name }}</a>, {{ item.short_name }}, {{ item.description }}
+    {{ item.name }}</a>, {{ item.short_name }}, {{ item.description }}
     <button ng-click="$ctrl.remove($index);">Don't want this one!</button>
   </li>
 </ol>    
