--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="app.js"></script>
+    <script src="controller.js"></script>
+    <script src="service.js"></script>
+    <script src="component.js"></script>
   </head>
 <body ng-app='NarrowItDownApp'>
+   <div class="container" ng-controller='NarrowItDownController as ctrl'>
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-  <ui-view></ui-view>
-  
+    <div class="form-group">
+      <input type="text" placeholder="search term" class="form-control" ng-model="ctrl.searchTerm">
+    </div>
+    <div class="form-group narrow-button">
+      <button class="btn btn-primary" ng-click="ctrl.narrowItDown();">Narrow It Down For Me!</button>
+    </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
-  
-  
-  <script src="app.js"></script>
-  
-  <!-- Routes -->
-  <script src="routes.js"></script>
-  
-  <script src="controller.js"></script>
-  <script src="service.js"></script>
-  <script src="component.js"></script>
+    <div class="warnings" ng-if='ctrl.warning !== ""'>{{ctrl.warning}}</div>
+	 
+    <!-- found-items should be implemented as a component -->
+    <found-items items="ctrl.foundItems" on-remove="ctrl.removeItem(index)"></found-items>
+  </div>
 
 </body>
 </html>
