--- a/index.html
+++ b/index.html
@@ -7,30 +7,27 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body ng-app='NarrowItDownApp'>
-
-  <load-spinner></load-spinner>
+<body ng-app='MenuApp'>
   
+  <h1>Welcome to our Restaurant</h1>
+
+
   <ui-view></ui-view>
   
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
   
-  <!-- Modules -->
-  <script src="spinner/spinner.module.js"></script>
-  <script src="app.js"></script>
-  
+  <!-- Modules -->  
+  <script src="data.module.js"></script>
+  <script src="menuapp.module.js"></script>
   
   <!-- Routes -->
   <script src="routes.js"></script>
   
-  <script src="controller.js"></script>
-  <script src="service.js"></script>
-  <script src="component.js"></script>
+  <script src="categories.controller.js"></script>
+  <script src="menudata.service.js"></script>
+  <script src="categories.component.js"></script>
   
-  <script src="spinner/loadspinner.component.js"></script>
 
 </body>
 </html>
