--- a/maincategories.template.html
+++ b/maincategories.template.html
@@ -1,6 +1,6 @@
 <a ui-sref="home">Home</a> &lt; <span>Categories</span>
 
 <h3>List of categories</h3>
-<categories items="categoriesCtrl.items"></categories>
+<categories categories="categoriesCtrl.categories"></categories>
 
 <ui-view></ui-view>
