--- a/categories.template.html
+++ b/categories.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="item in $ctrl.items" ui-sref="">
-    {{ item.short_name }} of {{ item.name }}
+  <li ng-repeat="category in $ctrl.categories" ui-sref="">
+    {{ category.short_name }} of {{ category.name }}
   </li>
 </ul>
