--- a/categories.template.html
+++ b/categories.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="category in $ctrl.categories" ui-sref="">
+  <li ng-repeat="category in $ctrl.categories" ui-sref="categories.categoryDetail({itemId: $index})">
     {{ category.short_name }} of {{ category.name }}
   </li>
 </ul>
