--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   <script src="routes.js"></script>
   
   <script src="menudata.service.js"></script>
+  
   <script src="categories.controller.js"></script>
   <script src="categories.component.js"></script>
+  <script src="categorydetail.controller.js"></script>
+  <script src="categoryitems.component.js"></script>
   
 
 </body>
