--- a/category-items.template.html
+++ b/category-items.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="item in $ctrl.items>">
+  <li ng-repeat="item in $ctrl.items">
     {{ item.name }} - {{ item.description }}
   </li>
 </ul>
